--- a/develop/ghost.yml
+++ b/develop/ghost.yml
@@ -3,7 +3,6 @@ version: '3.2'
 services:
     ghost:
         image: ghost:5.94.2
-        container_name: ghost
         restart: always
         ports:
         - 2368:2368
@@ -22,13 +21,23 @@ services:
 
     mysql:
         image: mysql:8.4.2
-        container_name: mysql
         restart: always
         environment:
             MYSQL_ROOT_PASSWORD: pw1234
             MYSQL_DATABASE: ghost
         volumes:
         - mysql_data:/var/lib/mysql
+        networks:
+        - backend
+
+    phpmyadmin:
+        image: phpmyadmin:5.2.1
+        restart: always
+        ports:
+        - 8082:80
+        environment:
+            PMA_HOST: mysql
+            MYSQL_ROOT_PASSWORD: pw1234
         networks:
         - backend
 
