Added Nginx as reverse proxy

--- a/develop/ghost.yml
+++ b/develop/ghost.yml
@@ -1,4 +1,13 @@
 services:
+    nginx:
+        build: ./nginx
+        hostname: nginx
+        ports:
+        - 80:80
+        - 443:443
+        networks:
+        - backend
+
     ghost:
         image: ghost:5.94.2
         restart: always
